fixed unnecessary horizontal scroll space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ h6 {
 }
 
 .back-to-top i:hover {
-  background: var(--secondary-accent-color);
+  background: #e3e0e0;
   color: var(--main-accent-color);
 }
 
@@ -154,13 +154,6 @@ h6 {
   max-height: 40px;
 }
 
-@media (max-width: 768px) {
-  #header .logo {
-    padding-top: 12px;
-    font-size: 24px;
-    text-align: center;
-  }
-}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -296,7 +289,6 @@ h6 {
 
 @media (max-width: 768px) {
   .get-started-btn {
-    display: none;
     margin: 0 48px 0 0;
     padding: 7px 20px 8px 20px;
   }
@@ -418,7 +410,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("../img/sizona_images/sizona_prem/Sizona_hero_v1..jpg");
+  background-image: url("../img/sizona_images/sizona_prem/Sizona_hero_v2.jpg");
   position: relative;
 
   background-position: center;
@@ -509,7 +501,7 @@ h6 {
 
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+    height: auto;
   }
   #hero h1 {
     font-size: 28px;
@@ -703,7 +695,7 @@ section {
 }
 
 .services .icon-box .icon i {
-  color: #151515;
+  color: #fff;
   font-size: 28px;
   transition: ease-in-out 0.3s;
 }
@@ -740,10 +732,9 @@ section {
 --------------------------------------------------------------*/
 .cta {
   background: linear-gradient(rgba(2, 2, 2, 0.45), rgba(0, 0, 0, 0.45)),
-    url("../img/sizona_images/sizona_prem/Sizona_230_LR.jpg") fixed center
-      center;
+    url("../img/sizona_images/sizona_prem/SL_cta-bg.jpg") fixed center center;
   background-size: cover;
-  padding: 60px 0;
+  padding: 160px 0;
 }
 
 .cta h3 {
@@ -960,7 +951,8 @@ section {
 }
 
 .counts .image {
-  background: url("../img/counts-img.jpg") center center no-repeat;
+  background: url("../img/sizona_images/sizona_prem/SL_counts-img.jpg") center
+    center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
@@ -984,8 +976,8 @@ section {
 # Testimonials
 --------------------------------------------------------------*/
 .testimonials {
-  padding: 80px 0;
-  background: url("../img/sizona_images/reward_style/REWARDSTYLE111_RSBirthdayParty_032.jpeg")
+  padding: 160px 0;
+  background: url("../img/sizona_images/sizona_prem/SL_testimonials-bg.jpg")
     no-repeat;
   background-position: center center;
   background-size: cover;
